kubernetes/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: idm
  labels:
    app: dashboard
spec:
  type: ClusterIP
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 8501
      protocol: TCP
      name: http
